# options_arena

./: .coderabbit.yaml  .gitattributes  .gitignore  CLAUDE.md  README.md  ai-debate.md  complex-reasoning.md  math-audit-report.md  openbb_int.md  production_audit.md  pyproject.toml  sgconfig.yml  tach.toml  v2.md
.claude/: .analyze-stamp  .context7-stamp  lessons.md  settings.json
.claude/agents/: architect-reviewer.md  bug-auditor.md  code-analyzer.md  code-reviewer.md  db-auditor.md  dep-auditor.md  file-analyzer.md  learnings-researcher.md  multi-agent-coordinator.md  oa-python-reviewer.md  prompt-engineer.md  quant-analyst.md  research-analyst.md  risk-manager.md  security-auditor.md  spec-analyzer.md  tdd-orchestrator.md  test-runner.md
.claude/commands/: analyze.md  brainstorming.md  bug.md  compound.md  context7.md  daily-audit.md  devops-audit.md  fix-loop.md  full-audit.md  math-audit.md  prompt.md  release-prep.md
.claude/context/: product-context.md  progress-archive.md  progress.md  project-brief.md  project-style-guide.md  project-vision.md  system-patterns-reference.md  system-patterns.md  tech-context.md
.claude/guides/: agent-coordination.md  context7-verification.md  datetime.md  dependency-reference.md  (+3 more)
.githooks/: commit-msg  install.py  pre-commit
docs/: technical-reference.md
tests/: CLAUDE.md  __init__.py  conftest.py  factories.py
tools/: bootstrap-dev-env.py  docgen.py  generate_quantlib_baselines.py  math_audit_report.py
web/: CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
(+1578 files in other folders)
